*Fixed that spawning action figures of a certain gender didn't work on servers
*Fixed that dinosaurs weren't rendered correctly in mob spawners